# apertium

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Jenkinsfile  Makefile.am  NEWS  README  README-MODES  README.md  apertium-3.0.pc.in  apertium-3.1.pc.in  apertium.m4  apertium.pc.in  autogen.sh  configure.ac
.github/workflows/: build.yaml
apertium/: BeamSearch.cpp  BeamSearch.h  CLExec.cpp  CLExec.h  CMakeLists.txt  Makefile.am  RuleExecution.cpp  RuleExecution.h  RuleParser.cpp  RuleParser.h  TranElemLiterals.h  a.cc  a.h  acx.rng  adapt_docx.cc  align.cc  align.h  ambiguous_chunker.cc  ambiguous_chunker.h  ambiguous_transfer.cc  ambiguous_transfer.h  analysis.cc  analysis.h  apertium-compile-caps.1  apertium-createmodes.awk  apertium-deshtml-alt.1  apertium-deshtml.1  apertium-deslatex.1  apertium-desman.c  apertium-desmediawiki.1  apertium-desmnemo.c  apertium-desodt.1  apertium-despptx.1  apertium-desrtf-cp1250.1  apertium-desrtf-cp1251.1  apertium-desrtf.1  apertium-destxt.1  apertium-deswxml.1  apertium-desxlsx.1  apertium-extract-caps.1  (+342 more)
apertium/win32/: getopt.c  getopt.h  libgen.c  libgen.h  regex.c  regex.h  runner_skeleton.c  snprintf.c  unistd.h
apertium/xsd/: transfer.xsd
cmake/: CMakeUseFlex.cmake  CMakeUseXsltproc.cmake  FindLibPcre.cmake  FindLttoolbox3.cmake
data/: Makefile.am  shared-mono.dix
docs/: index.html  index.scrbl  introduction.scrbl
locales/: Makefile.am  en.txt  package_list.txt  root.txt
m4/: ax_check_compile_flag.m4  ax_check_icu.m4  icu.m4
python/: Makefile.am  apertium_core.i  setup.py.in
scripts/: Makefile.am  apertium-editdist  apertium-filter-dix.in  apertium-filter-rules  apertium-filter-rules.in  apertium-filter-xml  apertium-genvdix  apertium-genvldix  apertium-genvrdix  apertium-metalrx  apertium-metalrx-to-lrx.in  apertium-translate-to-default-equivalent.in  filter-dix.xslt  filter-rules.xslt  metalrx-to-lrx.xslt  translate-to-default-equivalent.xslt
tests/: Makefile.am  README  base_test.py  run_tests.py
tests/adaptdocx/: __init__.py  extract_docx.py
tests/capitalization/: __init__.py
tests/cleanstream/: __init__.py
tests/data/: apertium-nno-nob.nno-nob.t2x  apertium-nno-nob.nno-nob.t3x  apertium-nno-nob.nob-nno.t1x  bad-attr.t1x  basic.crx  begin-repeat.crx  docx-01.txt  docx-01.xml  docx-newlines.adapted.xml  docx-newlines.xml  empty.t1x  empty.t2x  empty.t3x  eng-tagger-input.txt  eng.prob  lu.t1x  nob.prob
tests/deshtml-alt/: run
tests/deslatex/: run
tests/interchunk/: __init__.py
tests/odt/: expected.odt  in.odt  run
tests/odt/modes/: sample.mode
tests/postchunk/: __init__.py
tests/pretransfer/: __init__.py
tests/sh/: run
tests/tagger/: Makefile.am  __init__.py  streamparser.py  test_find_similar_ambiguity_classes.cc  unicode.tsx
tests/transfer/: __init__.py
utf8/: utf8_fwrap.h  utf8_fwrap.hpp
